--- a/static/index.html
+++ b/static/index.html
@@ -2,15 +2,20 @@
 <html>
 <head>
     <title>Flask et JS Asynchrone avec Cytoscape</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.21.0/cytoscape.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Bienvenue!</h1>
-    <input type="text" id="paramInput" placeholder="Entrez un paramètre">
-    <button id="fetchButton">Afficher le Graphe</button>
+    <div id="controls">
+        <input type="text" id="paramInput" placeholder="Entrez un paramètre">
+        <button id="fetchButton"><i class="fas fa-download"></i></button>
+        <button id="recalculateButton"><i class="fas fa-redo"></i></button>
+    </div>
     <div id="cy"></div>
+    <div id="contextMenu"></div>
     <p id="content"></p>
 </body>
 </html>
